fixing alignment and css

--- a/public/assets/css/burger_style.css
+++ b/public/assets/css/burger_style.css
@@ -9,6 +9,7 @@ li {
   width: 500px;
   background: #faebd7;
   list-style-type: none;
+  text-align: left;
 }
   
 label {
